# bmgedit

./: .gitignore  README.md
cmake/: FileEmbed.cmake
include/: BmgEntry.hpp  editor.hpp  isLittleEndian.hpp  terminal.hpp
src/: CMakeLists.txt  editor.cpp  empty.bmg  isLittleEndian.cpp  main.cpp  terminal.cpp
